Bug 346521, Crash [@ PresShell::ReflowEvent::Run] when clicking on close window link in popup window with embedded video, r+sr=roc